# animo

./: .coverage  .gitignore  README.md  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/animo/: __init__.py  __init__.pyi  __main__.py  common.py  image.py  plotter.py  tac.py  tasks.py
src/animo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_common.py  test_core.py  test_image.py  test_tac.py  test_tasks.py
test/data/segs/: Cyl101.nrrd
test/data/static/: Patient_test_Study_10_Scan_5_Bed_1_Dyn_1.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_10.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_11.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_12.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_13.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_14.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_15.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_16.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_17.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_18.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_19.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_2.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_20.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_3.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_4.dcm  Patient_test_Study_10_Scan_5_Bed_1_Dyn_5.dcm  (+4 more)
test/xml_input/: average.xml  avgxy.xml  decay_corr.xml  eval.xml  eval2.xml  example.xml  image_load.xml  image_series_load.xml  image_series_load_decay.xml  image_series_load_no_meta.xml  intxy.xml  mean_var.xml  multiply.xml  tac.xml  tac_integral.xml  to_xydata.xml  to_xydata_missing.xml  writer1.xml  writer2.xml
