[metadata]
# replace with your username:
name = animo
version = 1.0.1
author = Chris Walther Andersen
author_email = christian.walther.andersen@rsyd.dk
description = Nuclear medicine image analysis in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cwand/py_template
project_urls =
	Bug Tracker = https://github.com/cwand/animo/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = animo
install_requires =
	numpy>=1.26
	SimpleITK>=2.3
	matplotlib>=3.8
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest>=7.4
	pytest-cov>=4.1
	mypy>=1.8
	flake8>=6.1
	tox>=4.11

[options.package_data]
animo = py.typed

[flake8]
max-line-length = 100
ignore = W191,E128
